<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ParametresSessionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_session"
        android:id="@+id/tv_typeseance"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radiogroup_typeseance"
        android:layout_below="@id/tv_typeseance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/radioButton_seancesolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seance_solo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radioButton_seancecircuittraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circuit_training"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radioButton_seancegroupe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seance_groupe"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:layout_below="@id/radiogroup_typeseance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materiel_dispo"
        android:id="@+id/tv_materiel"/>

    <CheckBox android:id="@+id/checkbox_matos_chaise"
        android:layout_below="@id/tv_materiel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matos_chaise"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_matos_banc"
        android:layout_below="@+id/checkbox_matos_chaise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matos_banc"
        android:onClick="onCheckboxClicked"/>

    <Button android:id="@+id/valider_params"
        android:text="@string/valider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
